<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

        <TextView
            android:id="@+id/storeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storeName"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/storeCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <TextView
            android:id="@+id/storeRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/storePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priceRange"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/productListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/viewCartButton"
            android:text="@string/viewCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

</LinearLayout>
